# automate-replit

./: .gitignore  README.md  mypy  pyproject.toml
.github/workflows/: main.yml
autoreplit/: __init__.py  client.py  querys.py  schemagen.py
autoreplit/classes/: basic.py  comments.py  notifications.py  queryResult.py  repl.py  user.py
autoreplit/deprecated/: __init__.py  querys.py
autoreplit/deprecated/classes/: basic.py  comments.py  notifications.py  queryResult.py  repl.py  user.py
autoreplit/deprecated/gql/: currentUser.gql  userByUsername.gql
autoreplit/gql/: notifications.gql  repl.gql  updatePresence.gql  userByUsername.gql
autoreplit/querygen/: querygen.py  user.py  utils.py
docs/src/: api.rst  conf.py  index.rst  requirements.txt
docs/src/api/: basic.rst  client.rst  comments.rst  notifications.rst  queryResult.rst  repl.rst  user.rst
tests/: test_client.py  test_query.py  test_simple.py
