[tool.poetry]
name = "automate-replit"
version = "0.1.0"
description = "Automate your replit account using this replit api wrapper!"
authors = ["thatrandomperson5"]
packages = [
    { include = "autoreplit" },
] 
readme = "README.md"
include = ["autoreplit/gql/*.gql"]

[tool.poetry.dependencies]
python = "^3.8.0"
aiohttp = "^3.8.3"
aiolimiter = "1.0.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
black = "^23.1.0"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-mypy = "^0.10.3"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"