[tool.poetry]
name = "automate-replit"
version = "0.1.4"
description = "Automate your replit account using this replit api wrapper!"
authors = ["thatrandomperson5"]
packages = [
    { include = "autoreplit" }
] 
readme = "README.md"
include = ["autoreplit/gql/*.gql"]
repository = "https://github.com/thatrandomperson5/automate-replit"
homepage = "https://github.com/thatrandomperson5/automate-replit"
documentation = "http://automate-replit.rtfd.io/"
keywords = ["replit", "async", "asyncio", "aiohttp", "api", "api-wrapper"]

[tool.poetry.scripts]
schema-gen = "autoreplit.schemagen:main"

[tool.poetry.dependencies]
python = "^3.10.0"
aiohttp = "^3.8.3"
aiolimiter = ">=1.0.0"

graphql-py =  { version = ">=0.8.1", optional = true }



[tool.poetry.extras]
schemagen = ["graphql-py"]

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
black = "^23.1.0"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-mypy = "^0.10.3"

[tool.poetry.group.dev.dependencies]
poetry = "^1.5.0"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"